# mood_swings

./: .gitignore  PROJECT_DESCRIPTION.md  README.md  backend_setup.md  requirement.txt
.github/workflows/: deploy-frontend-pages.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  seed_data.py
backend/core/domain/: analytics.py  mood.py  note.py
backend/core/repository/: mood_repository.py  note_repository.py  user_repository.py
backend/infrastructure/sqlalchemy/: models.py
backend/infrastructure/sqlalchemy/repositories/: __init__.py  mood_repository.py  note_repository.py  user_repository.py
backend/repository/: mood_repository.py  note_repository.py  user_repository.py
backend/service/: analytics_service.py  mood_service.py  note_service.py  user_service.py
backend/src/: analytics.py
data/: mood_swing_data.csv
frontend/: 404.html  calm-town.css  calm-town.html  calm-town.js  dashboard.html  happiness-town.css  happiness-town.html  index.css  index.html  index.js  navbar.html  sadness-town.css  sadness-town.html  team.html  word-wall.html
frontend/assets/css/: calm-town.css  dashboard.css  happiness-town.css  index.css  sadness-town.css  word-wall.css
frontend/assets/images/favicon/: site.webmanifest
frontend/assets/js/: calm-town.js  client.js  dashboard.js  happiness-town.js  index.js  modal-media.js  sadness-town.js
notebooks/: MoodSwings.ipynb
notebooks/data/: mood_swing_data.csv
notebooks/models/: mood_model.joblib
