[project]
name = "backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.6.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.133.1",
    "mangum>=0.21.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.47",
]
